# xai-proto-vision

./: .gitignore  README.md  pyproject.toml
docs/: PROTOTYPE_METHODS_DETAILS.md
notebooks/: baseline_experiments.ipynb  protopnet_experiments.ipynb  prototree_experiments.ipynb  results_analysis_template.ipynb
scripts/: run_train.py  run_train_prototree.py
src/: constants.py  evaluate.py  trainer.py  trainerprototree.py  visualize.py
src/data/: __init__.py  datasets.py  transforms.py
src/models/: __init__.py  base_model.py  pipnet.py  protopnet.py  prototree.py  tesnet.py
