[project]
name = "xai-proto-vision"
version = "0.1.0"
description = "XAI project for prototype-based self-interpretable models for fine-grained image classification"
requires-python = ">=3.10"
dependencies = [
    # torch and torchvision are installed separately — see README setup instructions
    "numpy>=2.0.0",       # 1.x has no Python 3.13 wheels
    "Pillow>=10.4.0",     # 3.13 support added in 10.4
    "matplotlib>=3.9.0",  # 3.13 support added in 3.9
    "scikit-learn>=1.5.0", # 3.13 support added in 1.5
    "tqdm>=4.66.0",
    "torchinfo>=1.8.0",   # model summary + FLOPs for evaluate_model()
    "scipy>=1.14.0",      # 3.13 support added in 1.14
    "pandas>=2.2.2",      # 3.13 support added in 2.2.2
]

[project.optional-dependencies]
notebooks = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "ipywidgets>=8.1.0",
    "seaborn>=0.13.2",
]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.1.0",
]
torch = [
    "torch",
    "torchvision",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
